@@ -18,6 +18,7 @@ Github Actions:
 - #7162 Add new distributions to CI
 - #7167 | #7168 | #7173 Use changelog when creating deb files
 - #7169 Remove temporary directory when building debs
+- #7174 Show all workflows for Raspberry PI
 ===========
 
 v1.14.3-snapshot
